--- a/问卷统计结果.md
+++ b/问卷统计结果.md
@@ -1,13 +1,13 @@
 ## 问卷统计结果
 - 281条
 #### 总分前两名：
--     ​      不知道教学楼里哪间教室有空位，要一间间找（3.28）；
--     ​      在教学楼或图书馆缺少必需日用品（3.25）；
+-      不知道教学楼里哪间教室有空位，要一间间找（3.28）；
+-      在教学楼或图书馆缺少必需日用品（3.25）；
 #### 5的人数前两名：
--     ​      第一名同上（88）；
-- ​      食堂、小卖部太远了，好想有人帮我买饭回来啊（83）；
+-      第一名同上（88）；
+-      食堂、小卖部太远了，好想有人帮我买饭回来啊（83）；
 #### 其它意见中可参考的
-- ​      没啥，我把所有的都上传了，以后也许能看看。。
+-      没啥，我把所有的都上传了，以后也许能看看。。
 ##结论
 - 首先实现的功能点：
 -     ​      不知道教学楼里哪间教室有空位，要一间间找
